--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -40,9 +40,10 @@
 }
 
 .navbar__logo-img {
-  width: 300px;
+  height: 100%;
+  width: auto;
   max-width: none;
-  height: auto;
+  max-height: 100%;
   flex-shrink: 0;
   object-fit: contain;
 }
@@ -50,10 +51,6 @@
 @media (max-width: 600px) {
   .navbar__logo {
     height: 46px;
-  }
-
-  .navbar__logo-img {
-    width: 200px;
   }
 
   .navbar--scrolled .navbar__logo {
